<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">RewardApplication</string>
    <string name="action_settings">Settings</string>
    <string name="hello_world">Hello world!</string>
    <string name="title_activity_splash">Splash</string>
    <string name="title_activity_login">LoginActivity</string>

    
    <string name="no_network">No internet available</string>
    
    
    <!-- Header -->
	<string name="forYou">For You</string>
	<string name="skip">Skip</string>
	<string name="back">Back</string>
	<string name="menu">Menu</string>
	<string name="header_text">RC Label icon</string>
	
    <!-- End -->
    
    
    <!-- Registration form -->
    <string name="first_name">First Name</string>
    <string name="last_name">Last Name</string>
    <string name="email">Email</string>
    <string name="phone">Phone</string>
    <string name="password">Password</string>
    <string name="confirm_password">Confirm password</string>
    <string name="subscribe">Subscribe</string>
    <string name="register">Register</string>
    <string name="already_member">Already a member</string>
    <!-- end -->
    
    <string name="test_header">RC</string>
    


    <!-- Login form String -->
    <string name="forgot_password">Forgot Password</string>
    <string name="login">Login</string>
    <string name="not_member">Not a member</string>
    <string name="reset_pass_instruction">Password reset will be initiated\n via your mail</string>
    <string name="repeat_email">Repeat Email</string>
    <string name="reset_password">Reset Password</string>
    <!-- End -->

    <!--  Landing Screen -->
    <string name="advance_search">Adv\n Search</string>
    <string name="sign_in">Sign In</string>
    <string name="sign_up">Sign Up</string>
    <string name="powered_by_reward">Powered by Reward360</string>
    <!-- End -->
</resources>