<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/llForgotPassParent"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:background="#cc4a4a4a"
    android:gravity="center"
    android:orientation="vertical"
    android:paddingLeft="30dp"
    android:paddingRight="30dp" >

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/round_corner_square"
        android:orientation="vertical" >

        <TextView
            android:id="@+id/tvForgotPassTitle"
            style="@style/forgot_pass_textView"
            android:text="@string/test_header" />

        <View
            android:layout_width="fill_parent"
            android:layout_height="1dp"
            android:background="@android:color/black" />

        <TextView
            android:id="@+id/tvForgotPass"
            style="@style/forgot_pass_textView"
            android:text="@string/forgot_password"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/tvResetPassInstruction"
            style="@style/forgot_pass_textView"
            android:text="@string/reset_pass_instruction" />

        <EditText
            android:id="@+id/etRepeatEmail"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="20dp"
            android:layout_marginRight="20dp"
            android:layout_marginTop="10dp"
            android:hint="@string/repeat_email"
            android:inputType="textEmailAddress"
            android:singleLine="true" />

        <Button
            android:id="@+id/btnResetPassword"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="20dp"
            android:layout_marginRight="20dp"
            android:layout_marginTop="5dp"
            android:hint="@string/reset_password" />
    </LinearLayout>

</LinearLayout>