<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent" >

    <RelativeLayout
        android:id="@+id/bottom_layout"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true" >

        <Button
            android:id="@+id/register"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="20dip"
            android:layout_marginRight="20dip"
            android:layout_marginTop="20dip"
            android:text="@string/register" />

        <TextView
            android:id="@+id/already_member"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentRight="true"
            android:layout_below="@+id/register"
            android:layout_marginLeft="20dip"
            android:layout_marginRight="20dip"
            android:text="@string/already_member" />
    </RelativeLayout>

    <ScrollView
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        android:layout_above="@+id/bottom_layout" >

        <TableLayout
            android:id="@+id/registrationFormTable"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:paddingBottom="5dp"
            android:paddingLeft="10dp"
            android:paddingRight="10dp"
            android:paddingTop="5dp" >

            <TableRow
                android:id="@+id/row1"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content" >

                <TextView
                    style="@style/reg_textView"
                    android:text="@string/first_name" />

                <EditText
                    android:id="@+id/firstName"
                    style="@style/reg_editText"
                    android:inputType="textCapWords" >

                    <requestFocus />
                </EditText>
            </TableRow>

            <TableRow
                android:id="@+id/row2"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content" >

                <TextView
                    style="@style/reg_textView"
                    android:text="@string/last_name" />

                <EditText
                    android:id="@+id/lastName"
                    style="@style/reg_editText"
                    android:inputType="textCapWords" >
                </EditText>
            </TableRow>

            <TableRow
                android:id="@+id/row3"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content" >

                <TextView
                    style="@style/reg_textView"
                    android:text="@string/email" />

                <EditText
                    android:id="@+id/email"
                    style="@style/reg_editText"
                    android:inputType="textEmailAddress" >
                </EditText>
            </TableRow>

            <TableRow
                android:id="@+id/row4"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content" >

                <TextView
                    style="@style/reg_textView"
                    android:text="@string/phone" />

                <EditText
                    android:id="@+id/phone"
                    style="@style/reg_editText"
                    android:inputType="number" >
                </EditText>
            </TableRow>

            <TableRow
                android:id="@+id/row5"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content" >

                <TextView
                    style="@style/reg_textView"
                    android:text="@string/password" />

                <EditText
                    android:id="@+id/password"
                    style="@style/reg_editText"
                    android:inputType="textPassword" >
                </EditText>
            </TableRow>

            <TableRow
                android:id="@+id/row6"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content" >

                <TextView
                    style="@style/reg_textView"
                    android:text="@string/confirm_password" />

                <EditText
                    android:id="@+id/confirm_password"
                    style="@style/reg_editText"
                    android:inputType="textPassword" >
                </EditText>
            </TableRow>

            <TableRow
                android:id="@+id/row7"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content" >

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="left|center"
                    android:layout_weight="0.3"
                    android:text="@string/subscribe" />

                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="2" >

                    <ToggleButton
                        android:id="@+id/subscribe"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content" />
                </LinearLayout>
            </TableRow>
        </TableLayout>
    </ScrollView>

</RelativeLayout>