<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:gravity="center_horizontal"
    android:orientation="vertical"
    android:padding="5dp" >

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center|top" >

        <EditText
            android:id="@+id/etAdvanceSearch"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:ems="10"
            android:singleLine="true" >

            <requestFocus />
        </EditText>

        <TextView
            android:id="@+id/tvAdvSearchLabel"
            android:layout_width="fill_parent"
            android:layout_height="fill_parent"
            android:layout_weight="5"
            android:gravity="right|center"
            android:text="@string/advance_search" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/llBannerInfo"
        android:layout_width="fill_parent"
        android:layout_height="200dp"
        android:layout_marginTop="10dp"
        android:background="@drawable/round_corner_square"
        android:orientation="vertical" >
    </LinearLayout>

    <Button
        android:id="@+id/btnSignIn"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:text="@string/sign_in" />

    <Button
        android:id="@+id/btnSignUp"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:text="@string/sign_up" />

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="0.67" >

        <TextView
            android:id="@+id/tvPoweredBy"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentBottom="true"
            android:layout_centerHorizontal="true"
            android:text="@string/powered_by_reward" />

    </RelativeLayout>

</LinearLayout>